# max.jmp

./: README.md
Snippets/: PatcherRect2PresentationRect.maxpat  PresentationRect2PatcherRect.maxpat
extras/: max.jmp Guide.maxpat
help/: README.md  jmp.delay.maxhelp  jmp.noise.maxhelp
media/: README.md  Scarlatti_Demo_short.mid  jmp.colorize.js
patchers/: jmp.adstatus.maxpat  jmp.colorize.maxpat  jmp.default.maxpat  jmp.delay.maxpat  jmp.flip.maxpat  jmp.gate.maxpat  jmp.interpolate.linear.maxpat  jmp.interpolate.spline.maxpat  jmp.jit.accum.maxpat  jmp.jit.changetype.maxpat  jmp.jit.colorscale.maxpat  jmp.jit.gencoords.maxpat  jmp.jit.op.maxpat  jmp.jit.pack.maxpat  jmp.jit.planes2rows.maxpat  jmp.jit.rms.maxpat  jmp.list.broadcast.maxpat  jmp.list.get.maxpat  jmp.list.pad.maxpat  jmp.midi.channel.maxpat  jmp.midi.cleanup.maxpat  jmp.midi.delay.maxpat  jmp.midi.dynamics.maxpat  jmp.midi.feedback.maxpat  jmp.midi.filter.maxpat  jmp.midi.gain.maxpat  jmp.midi.jitter.maxpat  jmp.midi.makeid.maxpat  jmp.midi.message.maxpat  jmp.midi.noteoff2noteon.maxpat  jmp.midi.parseid.maxpat  jmp.midi.statusbyte.maxpat  jmp.midi.transpose.maxpat  jmp.midiread.maxpat  jmp.millistotimestring.maxpat  jmp.nonrealtime.maxpat  jmp.objectarray.maxpat  jmp.phasorgate~.maxpat  jmp.random.walk.maxpat  jmp.ravg.maxpat  (+11 more)
patchers/gui/: jmp.filtergraph.gui.maxpat
patchers/msp/: jmp.bounce~.maxpat  jmp.cascade~.maxpat  jmp.jit.buffer~.maxpat  jmp.mc.bounce~.maxpat  jmp.mc.jit.poke~.maxpat  jmp.mc.pan~.maxpat  jmp.midiseq~.maxpat  jmp.poly.jit.poke~.maxpat  jmp.sampleline~.maxpat
source/: CMakeLists.txt
source/include/: jmpmax.h
source/projects/: jmpmax-posttarget.cmake  jmpmax-pretarget.cmake
source/projects/jmp.noise/: CMakeLists.txt  jmp.noise.cpp
